bookinfo/networking/bookinfo-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: bookinfo-gateway
spec:
    selector:
        istio: ingressgateway # use istio default controller
    servers:
        - port:
              number: 80
              name: http
              protocol: HTTP
          hosts:
              - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: bookinfo
spec:
    hosts:
        - '*'
    gateways:
        - bookinfo-gateway
    http:
        - match:
              - uri:
                    exact: /productpage
              - uri:
                    prefix: /static
              - uri:
                    exact: /login
              - uri:
                    exact: /logout
              - uri:
                    prefix: /api/v1/products
          route:
              - destination:
                    host: productpage
                    port:
                        number: 9080
