bookinfo/networking/destination-rule-reviews.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: reviews
spec:
    host: reviews
    trafficPolicy:
        loadBalancer:
            simple: RANDOM
    subsets:
        - name: v1
          labels:
              version: v1
        - name: v2
          labels:
              version: v2
        - name: v3
          labels:
              version: v3
