bookinfo/networking/egress-rule-google-apis.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
    name: googleapis
spec:
    hosts:
        - www.googleapis.com
    ports:
        - number: 80
          name: http
          protocol: HTTP
        - number: 443
          name: https
          protocol: HTTPS
    resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: rewrite-port-for-googleapis
spec:
    hosts:
        - www.googleapis.com
    http:
        - match:
              - port: 80
          route:
              - destination:
                    host: www.googleapis.com
                    port:
                        number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: originate-tls-for-googleapis
spec:
    host: www.googleapis.com
    trafficPolicy:
        loadBalancer:
            simple: ROUND_ROBIN
        portLevelSettings:
            - port:
                  number: 443
              tls:
                  mode: SIMPLE # initiates HTTPS when accessing www.googleapis.com
