bookinfo/networking/fault-injection-details-v1.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: details
spec:
    hosts:
        - details
    http:
        - fault:
              abort:
                  httpStatus: 555
                  percentage:
                      value: 100
          route:
              - destination:
                    host: details
                    subset: v1
        - route:
              - destination:
                    host: details
                    subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: details
spec:
    host: details
    subsets:
        - name: v1
          labels:
              version: v1
