bookinfo/networking/virtual-service-all-v1.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: productpage
spec:
    hosts:
        - productpage
    http:
        - route:
              - destination:
                    host: productpage
                    subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: reviews
spec:
    hosts:
        - reviews
    http:
        - route:
              - destination:
                    host: reviews
                    subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: ratings
spec:
    hosts:
        - ratings
    http:
        - route:
              - destination:
                    host: ratings
                    subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: details
spec:
    hosts:
        - details
    http:
        - route:
              - destination:
                    host: details
                    subset: v1
---
...
