bookinfo/networking/virtual-service-details-v2.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: details
spec:
    hosts:
        - details
    http:
        - route:
              - destination:
                    host: details
                    subset: v2
