bookinfo/networking/virtual-service-ratings-db.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: reviews
spec:
    hosts:
        - reviews
    http:
        - route:
              - destination:
                    host: reviews
                    subset: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: ratings
spec:
    hosts:
        - ratings
    http:
        - route:
              - destination:
                    host: ratings
                    subset: v2
---
...
