bookinfo/networking/virtual-service-ratings-test-abort.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: ratings
spec:
    hosts:
        - ratings
    http:
        - match:
              - headers:
                    end-user:
                        exact: jason
          fault:
              abort:
                  percentage:
                      value: 100.0
                  httpStatus: 500
          route:
              - destination:
                    host: ratings
                    subset: v1
        - route:
              - destination:
                    host: ratings
                    subset: v1
