bookinfo/networking/virtual-service-reviews-80-20.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: reviews
spec:
    hosts:
        - reviews
    http:
        - route:
              - destination:
                    host: reviews
                    subset: v1
                weight: 80
              - destination:
                    host: reviews
                    subset: v2
                weight: 20
